# OrderManagement

./: pyproject.toml
src/: app.py  config.py  createsuperuser.py
src/admin/: __init__.py  auth.py  orders.py  users.py
src/alembic/versions/: 0420d058ebb8_.py  059a05b0bb59_.py  0bd193ce5e6d_.py  18f9360c4558_.py  21bf7d660f1c_.py  2ab063755fad_.py  7e3613066613_.py  b54a3b9b6318_.py
src/api/: routers.py
src/api/orders/: router.py  schemas.py  service.py
src/api/users/: router.py  schemas.py  service.py  utils.py
src/core/database/models/: __init__.py  orders.py  users.py
src/core/database/repositories/: __init__.py  orders.py  users.py
