[tool.poetry]
name = "ordermanagement"
version = "0.1.0"
description = ""
authors = ["zabit <xaclafun1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.2.0"
autoflake = "^2.3.1"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
environs = "^14.1.1"
pydantic-settings = "^2.8.1"
sqladmin = "^0.20.1"
itsdangerous = "^2.2.0"
python-jose = "^3.4.0"
python-multipart = "^0.0.20"
passlib = "^1.7.4"
bcrypt = "3.2.0"
redis = "^5.2.1"
pytest = "^8.3.5"
factory-boy = "^3.3.3"
celery = "^5.5.0"
pytest-asyncio = "^0.26.0"
aiosmtplib = "^4.0.0"
fastapi-limiter = "^0.1.6"
aiosqlite = "^0.21.0"
pydantic = {extras = ["email"], version = "^2.11.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
